# dodo-payments

./: .env  AI_USAGE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml
migrations/: 20240101000001_create_businesses.sql  20240101000002_create_customers.sql  20240101000003_create_invoices.sql  20240101000004_create_payments.sql  20240101000005_create_webhooks.sql
src/: db.rs  errors.rs  main.rs  mock_psp.rs  models.rs  tests.rs  webhooks.rs
src/handlers/: auth.rs  customers.rs  invoices.rs  mod.rs  payments.rs  webhooks.rs
